<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarTool"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:weightSum="10">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/appBar"
                    android:layout_width="wrap_content"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@color/white"
                    android:baselineAligned="false"
                    app:navigationIcon="@drawable/ic_menu"
                    android:layout_weight="8"
                    app:title="Drawer Layout" />

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/appBar1"
                    android:layout_width="0dp"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@color/white"
                    android:baselineAligned="false"
                    android:layout_weight="2"
                    app:navigationIcon="@drawable/ic_more" />

            </LinearLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/appBarTool">

            <LinearLayout
                android:paddingTop="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/martin"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layoutUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <EditText
                        android:paddingTop="10dp"
                        android:id="@+id/txt_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:hint="@string/phone_number"
                        android:inputType="text"
                        android:textSize="15sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/gradient_spinner"
                    android:layout_marginBottom="10dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <androidx.appcompat.widget.AppCompatSpinner
                    android:spinnerMode="dropdown"
                    android:id="@+id/spn_unit"
                    android:theme="@style/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/names"
                    android:prompt="@string/select" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:id="@+id/linearInternet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/animationInternet"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:lottie_autoPlay="true"
                        app:lottie_fileName="no-internet-connection.json"
                        app:lottie_loop="true" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/drawer"
        app:menu="@menu/menu"
        />

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        app:headerLayout="@layout/drawer_left"
        app:menu="@menu/menu_left"
        />

</androidx.drawerlayout.widget.DrawerLayout>